dragon ball z app

--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   align-items: center;
   padding: 20px 80px;
-  // background-image: linear-gradient(
-  //   to bottom right,
-  //   #fd5e09,
-  //   #fc7410,
-  //   #fb7a14,
-  //   #fabf2f
-  // );
+  background-image: linear-gradient(
+    to bottom right,
+    #fd5e09,
+    #fc7410,
+    #fb7a14,
+    #fabf2f
+  );
 }
