--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,13 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Open Sans";
+  padding: 20px 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-image: linear-gradient(
-    to bottom right,
-    #fd5b09,
-    #fc7813,
-    #fa931d,
-    #fabf2f
-  );
-  min-height: 90vh;
-  min-width: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+  box-sizing: border-box;
 }
