added styling for different components

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,7 +7,7 @@
   .logo-container {
     height: 100%;
     width: 70px;
-    padding: 25px;
+    padding: 0px 100px 550px 500px;
   }
 
   .options {
