--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,13 +1,14 @@
 .header {
   height: 70px;
-  width: 100px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 25px;
 
   .logo-container {
     height: 100%;
     width: 70px;
-    padding: 0px 100px 550px 500px;
+    padding: 25px;
   }
 
   .options {
@@ -17,7 +18,7 @@
     align-items: center;
     justify-content: flex-end;
 
-    .options {
+    .option {
       padding: 10px 15px;
       cursor: pointer;
     }
