--- a/src/components/display-character/display-character.styles.scss
+++ b/src/components/display-character/display-character.styles.scss
@@ -1,14 +1,56 @@
 .displayCharacter-container {
   min-width: 70%;
   height: auto;
-  display: flex;
-  flex-direction: row;
-  padding: 110px 15px;
-  background-image: linear-gradient(
-    to bottom right,
-    #fd5e09,
-    #fc7410,
-    #fb7a14,
-    #fabf2f
-  );
+
+  .characters {
+    display: flex;
+    flex-direction: row;
+    padding: 110px 15px;
+
+    //   background-image: linear-gradient(
+    //     to bottom right,
+    //     #fd5e09,
+    //     #fc7410,
+    //     #fb7a14,
+    //     #fabf2f
+    //   );}
+
+    .displayCharacter-image {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+      //   margin-right: 35px;
+      border: 1px solid black;
+      border-spacing: 50px 20px;
+    }
+
+    .content {
+      height: 90px;
+      padding: 135px 0px;
+      border: 1px solid black;
+      align-items: flex-start;
+      justify-content: center;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      color: #ef3f01;
+      background-color: #090200;
+      //   margin: 70px;
+
+      .title {
+        margin: 0px 30px 0px 30px;
+      }
+      .description {
+        margin: 30px 30px 0px 30px;
+        justify-content: center;
+        align-items: flex-start;
+        font-size: medium;
+        min-width: 350px;
+      }
+    }
+  }
 }
