--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -9,6 +9,9 @@
     height: 100%;
     width: 70px;
     padding: 25px;
+
+    align-items: center;
+    justify-content: center;
   }
 
   .options {
